[package]
name = "makefile_parser_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Volodymyr Rastiehaiev"]
description = "Rust library to parse Makefiles, with variables supported."

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
